HTML in instructions; volunteering with timestamp

--- a/volunteer_community_centre/Volunteering.html
+++ b/volunteer_community_centre/Volunteering.html
@@ -1,7 +1,7 @@
 {{ block title }}Round {{ subsession.round_number }}{{ endblock }}
 {{ block content }}
 
-This is round {{ subsession.round_number }} of {{ session.num_rounds }}.
+This is round {{ subsession.round_number }} of {{ Constants.num_rounds }}.
 
 Do you volunteer for this round?
 
