Volunteer (or timeout) instead of next button
Hide survey and instructions except on first run.

--- a/volunteer_community_centre/Results.html
+++ b/volunteer_community_centre/Results.html
@@ -1,8 +1,9 @@
 {{ block title }}Results{{ endblock }}
 {{ block content }}
 
-Your name is {{ player.name }} and your age is {{ player.age }} years.
-
+<p>
+You {{ if player.volunteer }}volunteered{{ else }}did not volunteer{{ endif }}.
+</p>
 {{ next_button }}
 
 {{ endblock }}
