--- a/volunteer_community_centre/Results.html
+++ b/volunteer_community_centre/Results.html
@@ -2,7 +2,10 @@
 {{ block content }}
 
 <p>
-You {{ if player.volunteer }}volunteered{{ else }}did not volunteer{{ endif }}.
+Thanks for making your choice.
+</p>
+<p>
+{{ message }}
 </p>
 {{ next_button }}
 
