Use same CSS style on Volunteer button.
Note adding type="button" breaks it.

--- a/volunteer_community_centre/Volunteering.html
+++ b/volunteer_community_centre/Volunteering.html
@@ -4,8 +4,10 @@
 <p>
 This is round {{ subsession.round_number }} of {{ Constants.num_rounds }}.
 </p>
-<button name="volunteer" value="True">Volunteer</button>
-<!-- No next button, if don't volunteer wait for timeout -->
+<p>
+  <button class="btn btn-primary" name="volunteer" value="True">Volunteer</button>
+  <!-- No next button, if don't volunteer wait for timeout -->
+</p>
 <p>
   <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
     Review Instructions
