Using {{ formfield field.name }} gives better UI
The downside is this needs more verbose and repetitive
player field definitions (apparently unavoidable in the
oTree Studio interface).

The upside is field validation when use clicks 'Next',
making this much more pleasant to use with 10 fields.
And this avoids having to keep the raw HTML in sync
with any future oTree changes.

Note using {{ formfield field.name label="" }} to supress
the form label which I have put in the first column.

--- a/risk_attitude/LotteryDecision.html
+++ b/risk_attitude/LotteryDecision.html
@@ -12,16 +12,7 @@ This for loop over lottery1, ..., lottery10 depends on accessing the number 1, .
         <tr>
             <th>#{{ field.label }}</th>
             <td><img height="100" src="/static/risk_attitude/{{ field.name }}red.png" alt="Picture of 10 ball lottery with {{ field.label.text }} red ball(s)" /></td>
-            <td>
-                <p>
-                <input class="form-check-input" type="radio" id="id_{{ field.name }}-0" name="{{ field.name }}" value="True">
-                A: Red = 100, White = 80
-                <br />
-                <input class="form-check-input" type="radio" id="id_{{ field.name }}-1" name="{{ field.name }}" value="False">
-                B: Red = 190, White = 5
-                </p>
-                {{ formfield_errors field.name }}
-            </td>
+            <td>{{ formfield field.name label="" }}</td>
         </tr>
     {{ endfor }}
 </table>
