Can omit .name here
It seems {{ formfield field.name }} or {{ formfield field }}
work with {{ for field in form }} but the error field only
accepts {{ formfield_errors field.name }} in oTree v5.2.8
and not {{ formfield_errors field }} right now.

--- a/risk_attitude/LotteryDecision.html
+++ b/risk_attitude/LotteryDecision.html
@@ -12,7 +12,7 @@ This for loop over lottery1, ..., lottery10 depends on accessing the number 1, .
         <tr>
             <th>#{{ field.label }}</th>
             <td><img height="100" src="/static/risk_attitude/{{ field.name }}red.png" alt="Picture of 10 ball lottery with {{ field.label.text }} red ball(s)" /></td>
-            <td>{{ formfield field.name label="" }}</td>
+            <td>{{ formfield field label="" }}</td>
         </tr>
     {{ endfor }}
 </table>
