--- a/questionnaire_and_payment/Payments.html
+++ b/questionnaire_and_payment/Payments.html
@@ -2,7 +2,7 @@
 {{ block content }}
 
 <p>Thank you again for taking part in this experimental session today.</p>
-<p>In the lottery game, the computer extracted for you the nth decision. In this decision, you selected lottery A/B, meaning that you could earn 100/190 tokens with X% probability, and 80/5 tokens with X% probability. The computer extracted a red/white ball, meaning that you earned 100/190/80/5 tokens.</p>
+<p>{{ lottery_msg }}</p>
 <p>In the interactive game, you played five rounds. You earned X tokens in the first round, X tokens in the second round, X tokens in the third round, X tokens in the fourth round, and X tokens in the fifth round, for a total of X tokens.</p>
 <p>Your total earnings of {{ participant.payoff }} tokens corresponds to {{ participant.payoff_in_real_world_currency }}, plus the {{ session.config.participation_fee }} participation fee that you will receive as a reward for your participation today making {{ participant.payoff_plus_participation_fee }}. You will receive this money in your next payslip. Note that this money will be subject to taxation and national insurance.</p>
 <p>Thank you for helping science with your participation today. We hope that you enjoyed this experience, and that you are keen to learn more about the use of experimental methods for the study of resource and land-related decisions as well as to use such methods in your future research.</p>
