Use less vertical space on lottery decision
The images look fine on my desktop at this height,
but we need to test this on tablets/phones too.

Could not see how to suppress the formfield label
(was taking a whole line even with empty string)
so have hidden it via CSS instead.

--- a/risk_attitude/LotteryDecision.html
+++ b/risk_attitude/LotteryDecision.html
@@ -5,13 +5,15 @@
 
 {{ comment }}
 This for loop over lottery1, ..., lottery10 depends on accessing the number 1, ..., 10 as field.label.text
+Would like to disable the formfield label (to save vertical space), but instead hide it with CCS style rule.
 {{ endcomment }}
+<style> .col-form-label { display: none; } </style>
 <table class="table">
     <thead><th>#</th><th>Red/white ratio</th><th>Lottery A or B?</th></thead>
     {{ for field in form }}
         <tr>
             <th>#{{ field.label }}</th>
-            <td><img height="100" src="/static/risk_attitude/{{ field.name }}red.png" alt="Picture of 10 ball lottery with {{ field.label.text }} red ball(s)" /></td>
+            <td><img height="60" src="/static/risk_attitude/{{ field.name }}red.png" alt="Picture of 10 ball lottery with {{ field.label.text }} red ball(s)" /></td>
             <td>{{ formfield field label="" }}</td>
         </tr>
     {{ endfor }}
