--- a/risk_attitude/LotteryDecision.html
+++ b/risk_attitude/LotteryDecision.html
@@ -12,7 +12,7 @@ Would like to disable the formfield label (to save vertical space), but instead 
     <thead><th>#</th><th>Red/white ratio</th><th>Lottery A or B?</th></thead>
     {{ for field in form }}
         <tr>
-            <th>#{{ field.label }}</th>
+            <th>{{ field.label }}</th>
             <td><img height="60" src="/static/risk_attitude/{{ field.name }}red.png" alt="Picture of 10 ball lottery with {{ field.label.text }} red ball(s)" /></td>
             <td>{{ formfield field label="" }}</td>
         </tr>
