--- a/risk_attitude/LotteryDecision.html
+++ b/risk_attitude/LotteryDecision.html
@@ -3,20 +3,63 @@
 
 <p>Which lottery do you prefer to play – A or B? Please make 10 choices. Remember that only one of the decisions will be randomly selected for execution.</p>
 
-{{ comment }}
-This for loop over lottery1, ..., lottery10 depends on accessing the number 1, ..., 10 as field.label.text
-Would like to disable the formfield label (to save vertical space), but instead hide it with CCS style rule.
-{{ endcomment }}
+<!-- Would like to disable the formfield label (to save vertical space), but instead hide it with CCS style rule. -->
 <style> .col-form-label { display: none; } </style>
+
 <table class="table">
-    <thead><th>#</th><th>Red/white ratio</th><th>Lottery A or B?</th></thead>
-    {{ for field in form }}
-        <tr>
-            <th>{{ field.label }}</th>
-            <td><img height="60" src="/static/risk_attitude/{{ field.name }}red.png" alt="Picture of 10 ball lottery with {{ field.label.text }} red ball(s)" /></td>
-            <td>{{ formfield field label="" }}</td>
-        </tr>
-    {{ endfor }}
+    <thead>
+        <th>#</th><th>Red/white ratio</th><th>Lottery A or B?</th>
+    </thead>
+    <tr>
+        <th>1</th>
+        <td><p>🔴 ⚪ ⚪ ⚪ ⚪<br />⚪ ⚪ ⚪ ⚪ ⚪</p></td>
+        <td>{{ formfield 'lottery1' }}</td>
+    </tr>
+    <tr>
+        <th>2</th>
+        <td><p>🔴 🔴 ⚪ ⚪ ⚪<br />⚪ ⚪ ⚪ ⚪ ⚪</p></td>
+        <td>{{ formfield 'lottery2' }}</td>
+    </tr>
+    <tr>
+        <th>3</th>
+        <td><p>🔴 🔴 🔴 ⚪ ⚪<br />⚪ ⚪ ⚪ ⚪ ⚪</p></td>
+        <td>{{ formfield 'lottery3' }}</td>
+    </tr>
+    <tr>
+        <th>4</th>
+        <td><p>🔴 🔴 🔴 🔴 ⚪<br />⚪ ⚪ ⚪ ⚪ ⚪</p></td>
+        <td>{{ formfield 'lottery4' }}</td>
+    </tr>
+    <tr>
+        <th>5</th>
+        <td><p>🔴 🔴 🔴 🔴 🔴<br />⚪ ⚪ ⚪ ⚪ ⚪</p></td>
+        <td>{{ formfield 'lottery5' }}</td>
+    </tr>
+    <tr>
+        <th>6</th>
+        <td><p>🔴 🔴 🔴 🔴 🔴<br />🔴 ⚪ ⚪ ⚪ ⚪</p></td>
+        <td>{{ formfield 'lottery6' }}</td>
+    </tr>
+    <tr>
+        <th>7</th>
+        <td><p>🔴 🔴 🔴 🔴 🔴<br />🔴 🔴 ⚪ ⚪ ⚪</p></td>
+        <td>{{ formfield 'lottery7' }}</td>
+    </tr>
+    <tr>
+        <th>8</th>
+        <td><p>🔴 🔴 🔴 🔴 🔴<br />🔴 🔴 🔴 ⚪ ⚪</p></td>
+        <td>{{ formfield 'lottery8' }}</td>
+    </tr>
+    <tr>
+        <th>9</th>
+        <td><p>🔴 🔴 🔴 🔴 🔴<br />🔴 🔴 🔴 🔴 ⚪</p></td>
+        <td>{{ formfield 'lottery9' }}</td>
+    </tr>
+    <tr>
+        <th>10</th>
+        <td><p>🔴 🔴 🔴 🔴 🔴<br />🔴 🔴 🔴 🔴 🔴</p></td>
+        <td>{{ formfield 'lottery10' }}</td>
+    </tr>
 </table>
 
 {{ next_button }}
