Use dynamic label via template variable
This avoids hard coding 'points' in the label. See:
https://otree.readthedocs.io/en/latest/forms.html#form-fields-with-dynamic-labels

--- a/risk_attitude/LotteryUnderstanding.html
+++ b/risk_attitude/LotteryUnderstanding.html
@@ -16,7 +16,7 @@
 <p>
 The above decision has been extracted for execution by the computer. In this decision you had chosen Lottery A. The computer extracts a white ball.
 </p>
-{{ formfields }}
+{{ formfield 'lottery_understanding' label=lottery_understanding_label }}
 
 {{ next_button }}
 
