Finer grained messages in volunteering game; Language tweaks
Minor protocol wording changes from Simone Piras and
Laure Kuhfuss.

--- a/risk_attitude/LotteryDecision.html
+++ b/risk_attitude/LotteryDecision.html
@@ -1,7 +1,7 @@
 {{ block title }}Decision{{ endblock }}
 {{ block content }}
 
-<p>Which lottery do you prefer to play – A or B? Please make 10 choices. Remember that only one of the decisions will be randomly selected for execution.</p>
+<p>You are now asked to make the actual decisions which will determine your earnings. Which lottery do you prefer to play – A or B? Please make 10 choices. Remember that only one of the decisions will be randomly selected for execution.</p>
 
 <!-- Would like to disable the formfield label (to save vertical space), but instead hide it with CCS style rule. -->
 <style> .col-form-label { display: none; } </style>
