--- a/risk_attitude/LotteryUnderstanding.html
+++ b/risk_attitude/LotteryUnderstanding.html
@@ -17,7 +17,9 @@
 The above decision has been extracted for execution by the computer. In this decision you had chosen Lottery A. The computer extracts a white ball.
 </p>
 {{ formfield 'lottery_understanding' label=lottery_understanding_label }}
-
+<p>
+Once you have checked your answer please click ‘Next’.
+</p>
 {{ next_button }}
 
 {{ endblock }}
