Cache round-specific instructions for reminder.
Also refactored and replaced the existing participant level variables
for the final payment report. Now using a single string variable of
the round instructions or final report message.

Closes #6

--- a/volunteer_community_centre/Volunteering.html
+++ b/volunteer_community_centre/Volunteering.html
@@ -15,7 +15,7 @@ This is round {{ subsession.round_number }} of {{ Constants.num_rounds }}.
 </p>
 <div class="collapse" id="collapseExample">
   <div class="card card-body">
-    Click the button to volunteer, or wait for the timer to finish.
+    {{ instructions }}
   </div>
 </div>
 
