Use ‘Fancy Quotes’ consistently; minor wording tweaks

--- a/risk_attitude/Introduction.html
+++ b/risk_attitude/Introduction.html
@@ -6,7 +6,7 @@
 <p>The games you will play recreate situations you might face in everyday life. Just as the decisions you make in everyday life impact your earnings and wellbeing, each of the games will allow you to earn real money. And as in real life, the amount of money that you will earn depends on your decision, on chance, and, for the interactive game, on the decisions made by others too. There are no wrong of right decisions; therefore, we ask you to decide based exclusively on your preferences.</p>
 <p>You will receive {{ session.config.participation_fee }} to thank you for your participation today. In addition to that, you will be paid a sum of money which depends on the results of the games. During the games we work in {{ units }}. At the end of the experiment, your earnings in {{ units }} will be converted into {{ rate }}. Your total earnings will be communicated to you privately at the end of the last game today. Other participants will not know your total earnings. You will be paid this money in your next payslip. Note that the money earned will be subject to taxation and national insurance.</p>
 <p>Should you have any questions during the games, please do not open your microphone or talk to other participants; ask us by raising your hand virtually. A member of the experimental team will answer your question for everyone. Do you have any questions?</p>
-<p>Now please click "Next".</p>
+<p>Now please click ‘Next’.</p>
 {{ formfields }}
 
 {{ next_button }}
