--- a/volunteer_community_centre/Understanding.html
+++ b/volunteer_community_centre/Understanding.html
@@ -2,7 +2,7 @@
 {{ block content }}
 
 <p>
-We will now ask you some questions to check that you have understood the instructions of this game. Please answer them and then click on ‘Check my answers’ below. You need to provide the right answers to be able to proceed. Your answer to these questions will not affect your final earnings.    
+We will now ask you some questions to check that you have understood the instructions of this game. Please answer them and then click on ‘Next’ below. You need to provide the right answers to be able to proceed. Your answer to these questions will not affect your final earnings.
 </p>
 {{ formfields }}
 <p>
