--- a/questionnaire_and_payment/Payments.html
+++ b/questionnaire_and_payment/Payments.html
@@ -2,8 +2,8 @@
 {{ block content }}
 
 <p>Thank you again for taking part in this experimental session today.</p>
-<p>{{ lottery_msg }}</p>
-<p>{{ interactive_msg }}</p>
+<p>{{ risk_attitude_msg }}</p>
+<p>{{ volunteering_msg }}</p>
 <p>Your total earnings of {{ participant.payoff }} corresponds to {{ participant.payoff_in_real_world_currency }}, plus the {{ session.config.participation_fee }} that you will receive as a reward for your participation today, making <b>{{ participant.payoff_plus_participation_fee }}</b>. You will receive this money in your next payslip. Note that this money will be subject to taxation and national insurance.</p>
 <p>Thank you for helping the Institute’s science with your participation today. We hope that you enjoyed this experience, and that you are keen to learn more about the use of experimental methods for the study of resource and land-related decisions as well as to use such methods in your future research.</p>
 <p>In the next months, the experimental team will organise a seminar where you will be provided a feedback about the results of this experiment, and you will have the opportunity to hear about the use of experimental methods from two renowned external speakers.</p>
