Add new information sheet and consent pages
Cross reference issue #12

--- a/questionnaire_and_payment/Payments.html
+++ b/questionnaire_and_payment/Payments.html
@@ -1,4 +1,6 @@
+{{ extends 'global/Page.html' }}
 {{ block title }}Payments{{ endblock }}
+
 {{ block content }}
 
 <p>Thank you again for taking part in this experimental session today.</p>
