--- a/questionnaire_and_payment/Questionnaire.html
+++ b/questionnaire_and_payment/Questionnaire.html
@@ -1,4 +1,6 @@
+{{ extends 'global/Page.html' }}
 {{ block title }}Title{{ endblock }}
+
 {{ block content }}
 
 <p>Please provide your Staff Identification Number (SID). This is required to process your payment. In its absence, you will not be able to receive your payment, and the experimental team will have to ignore your choices.</p>
