--- a/risk_attitude/Introduction.html
+++ b/risk_attitude/Introduction.html
@@ -1,4 +1,6 @@
+{{ extends 'global/Page.html' }}
 {{ block title }}Introduction{{ endblock }}
+
 {{ block content }}
 
 <p>Thank you for coming today. This workshop is funded by the MDT in the framework of the project ‘Introducing experimental methods for the study of resource and land-related decisions in rural Scotland’. The experimental team consists of Simone Piras and Laure Kuhfuss from SEGS, and Peter Cock from ICS. We would like to show you how individual decision-making can be studied through experimental approaches. Please listen to the instructions carefully. These will be read aloud by the experimenter, and you will be given time for asking questions.</p>
