--- a/risk_attitude/LotteryDecision.html
+++ b/risk_attitude/LotteryDecision.html
@@ -1,4 +1,6 @@
+{{ extends 'global/Page.html' }}
 {{ block title }}Decision{{ endblock }}
+
 {{ block content }}
 
 <p>You are now asked to make the actual decisions which will determine your earnings. Which lottery do you prefer to play – A or B? Please make 10 choices. Remember that only one of the decisions will be randomly selected for execution.</p>
