--- a/risk_attitude/LotteryInstructions.html
+++ b/risk_attitude/LotteryInstructions.html
@@ -1,4 +1,6 @@
+{{ extends 'global/Page.html' }}
 {{ block title }}Explanation{{ endblock }}
+
 {{ block content }}
 
 <p>Now we will play the first game. In this game you will be asked to make 10 decisions, one after the other.</p>
