--- a/volunteering/Instructions.html
+++ b/volunteering/Instructions.html
@@ -1,4 +1,6 @@
+{{ extends 'global/Page.html' }}
 {{ block title }}Volunteer dilemma: instructions {{ endblock }}
+
 {{ block content }}
 
 {{ instructions }}
