--- a/_templates/global/Page.html
+++ b/_templates/global/Page.html
@@ -1,8 +1,8 @@
-{% extends "otree/Page.html" %}
-{% load otree static %}
 
-{% block global_styles  %}
-{% endblock %}
+{{ extends "otree/Page.html" }}
 
-{% block global_scripts  %}
-{% endblock %}
+{{ block global_styles  }}
+    <style>
+    
+    </style>
+{{ endblock }}
