--- a/risk_attitude/LotteryUnderstanding.html
+++ b/risk_attitude/LotteryUnderstanding.html
@@ -1,4 +1,6 @@
+{{ extends 'global/Page.html' }}
 {{ block title }}Lottery rules check{{ endblock }}
+
 {{ block content }}
 
 <p>We will now ask you a question to check that you have understood the instructions of this first game. Please answer it and then click on ‘Next’ below. If your answer is correct, when clicking ‘Next’ you will proceed to the actual decisions; otherwise, you will need to review your answer and try again. Your answer to this question will not affect your final earnings.</p>
