Add consent page with mandatory boolean field
See issue #12, rather than 10 checkboxes as on the paper
form this is based on, shows a bullet list with a single
boolean field to consent.

Also defines the info-sheet date as a constant to
ensure the InfoSheet and Consent pages are consistent.

--- a/risk_attitude/InfoSheet.html
+++ b/risk_attitude/InfoSheet.html
@@ -4,7 +4,7 @@
 {{ block content }}
 
 <p>
-Timescale: January 2022<br/>
+Timescale: {{ Constants.info_sheet_date }}<br/>
 Funding body: Macaulay Development Trust (MDT)
 </p>
 <h2>Why are we implementing this online workshop?</h2>
