--- a/risk_attitude/LotteryInstructions.html
+++ b/risk_attitude/LotteryInstructions.html
@@ -6,7 +6,7 @@
 <p>Now we will play the first game. In this game you will be asked to make 10 decisions, one after the other.</p>
 <p>Your task is to choose between two alternative lotteries, A and B. The lotteries differ in the number of points that can be won in each of them. Each of the 10 decisions bear a different chance of earning points; the number of points to be won also varies between lottery A and B in each of the 10 decisions.</p>
 <p>At the end of the session today, the computer will randomly select one of the 10 decisions to execute for real for each of you. The other nine decisions will be ignored and you will not get any money from them. Each of the 10 decisions is equally likely to be selected. After selecting a decision, the computer will execute your selected lottery (A or B) for that decision, and you will be paid accordingly.</p>
-<p>Do you have any question?</p>
+<p>Do you have any questions?</p>
 <p>Now please click ‘Next’, and you will be redirected to a page with a question to check your understanding of the instructions.</p>
 
 {{ next_button }}
