Dynamic page title: Result of round N

--- a/volunteering/Results.html
+++ b/volunteering/Results.html
@@ -1,5 +1,5 @@
 {{ extends 'global/Page.html' }}
-{{ block title }}Results{{ endblock }}
+{{ block title }}Result of round {{ subsession.round_number }}{{ endblock }}
 
 {{ block content }}
 
