--- a/risk_attitude/InfoSheet.html
+++ b/risk_attitude/InfoSheet.html
@@ -23,7 +23,7 @@ Your participation is entirely voluntary; you will be free to omit questions you
 <h2>Data confidentiality</h2>
 <p>All data will be stored on secured devices and treated with full confidentiality. Responses will be anonymised; only general findings will be shared with the funder and other parties, and nothing in research outputs will be identifiable to you.</p>
 <h2>Who to contact?</h2>
-<p>This research is project lead by a multidisciplinary team of researchers of the James Hutton Institute, including Simone Piras, Laure Kuhfuss, and Peter Cock.</p>
+<p>This research project is led by a multidisciplinary team of researchers of the James Hutton Institute, including Simone Piras, Laure Kuhfuss, and Peter Cock.</p>
 <p>If you have any questions at any time, please feel free to contact:<br/>
 Simone Piras: Simone.Piras@hutton.ac.uk, 01224 395399</p>
 
