--- a/risk_attitude/LotteryUnderstanding.html
+++ b/risk_attitude/LotteryUnderstanding.html
@@ -20,10 +20,9 @@ vertical-align:baseline;
 
 <table class="table">
     <thead>
-        <th>#</th><th>Red/white ratio</th><th>Lottery A or B?</th>
+        <th>Red/white ratio</th><th>Lottery A or B?</th>
     </thead>
     <tr>
-        <th>3</th>
         <td><div class="lottery"><p>🔴 🔴 🔴 ⚪ ⚪<br />⚪ ⚪ ⚪ ⚪ ⚪</p></div></td>
         <td>{{ lottery_payoffs }}
         </td>
