--- a/risk_attitude/LotteryUnderstood.html
+++ b/risk_attitude/LotteryUnderstood.html
@@ -19,10 +19,9 @@ vertical-align:baseline;
 <p>Correct:</p>
 <table class="table">
     <thead>
-        <th>#</th><th>Red/white ratio</th><th>Lottery A or B?</th>
+        <th>Red/white ratio</th><th>Lottery A or B?</th>
     </thead>
     <tr>
-        <th>3</th>
         <td><div class="lottery"><p>🔴 🔴 🔴 ⚪ ⚪<br />⚪ ⚪ ⚪ ⚪ ⚪</p></div></td>
         <td>{{ lottery_payoffs }}
         </td>
