Updates from oTree studio including constants style
The constants style changes require oTree 5.4 or later,
see mailing list announcment on 18 December 2021.

There are also now some type hints on function definitions.

--- a/risk_attitude/InfoSheetAndConsent.html
+++ b/risk_attitude/InfoSheetAndConsent.html
@@ -4,7 +4,7 @@
 {{ block content }}
 
 <p>
-Timescale: {{ Constants.info_sheet_date }}<br/>
+Timescale: {{ C.INFO_SHEET_DATE }}<br/>
 Funding body: Macaulay Development Trust (MDT)
 </p>
 <h2>Who is this study conducted by?</h2>
