--- a/volunteering/Volunteering.html
+++ b/volunteering/Volunteering.html
@@ -4,7 +4,7 @@
 {{ block content }}
 
 <p>
-This is round {{ subsession.round_number }} of {{ Constants.num_rounds }}.
+This is round {{ subsession.round_number }} of {{ C.NUM_ROUNDS }}.
 </p>
 <p>
   <button class="btn btn-primary" name="volunteer" value="True">Volunteer</button>
