Polishing text of the lottery game

--- a/risk_attitude/LotteryDecision.html
+++ b/risk_attitude/LotteryDecision.html
@@ -77,6 +77,8 @@ vertical-align:baseline;
     </tr>
 </table>
 
+<p>Once you have made your decisions please click ‘Next’.</p>
+
 {{ next_button }}
 
 {{ endblock }}
