--- a/risk_attitude/LotteryUnderstood.html
+++ b/risk_attitude/LotteryUnderstood.html
@@ -28,7 +28,7 @@ vertical-align:baseline;
     </tr>
 </table>
 <p>
-If the above lottery decision was selected by the computer, you had chosen Lottery A, and the computer extracted a white ball, then yes: Your payoff would be {{ C.PAYOFF_WHITE_A|cu }}.
+If the above decision was selected by the computer, you had chosen lottery A, and the computer extracted a white ball, then yes: Your payoff would be {{ C.PAYOFF_WHITE_A|cu }}.
 </p>
 <p>
 We will now proceed to the actual lottery game, where you must make ten decisions.
