Polishing text of the volunteering game

--- a/volunteering/Instructions.html
+++ b/volunteering/Instructions.html
@@ -1,5 +1,5 @@
 {{ extends 'global/Page.html' }}
-{{ block title }}Volunteer dilemma: instructions {{ endblock }}
+{{ block title }}Second game: instructions {{ endblock }}
 
 {{ block content }}
 
