--- a/volunteering/Understanding.html
+++ b/volunteering/Understanding.html
@@ -4,11 +4,11 @@
 {{ block content }}
 
 <p>
-We will now ask you some questions to check that you have understood the instructions of this game. Please answer them and then click on ‘Next’ below. You need to provide the right answers to be able to proceed. Your answer to these questions will not affect your final earnings.
+We will now ask you some questions to check that you have understood the instructions of this game. Please answer them and then click on ‘Next’ below. You need to provide the right answers to be able to proceed. Your answers to these questions will not affect your final earnings.
 </p>
 {{ formfields }}
 <p>
-Once you have checked your answer please click ‘Next’.
+Once you have checked your answers please click ‘Next’.
 </p>
 {{ next_button }}
 
