--- a/questionnaire_and_payment/Questionnaire.html
+++ b/questionnaire_and_payment/Questionnaire.html
@@ -1,9 +1,10 @@
 {{ extends 'global/Page.html' }}
-{{ block title }}Title{{ endblock }}
+{{ block title }}Final questionnaire{{ endblock }}
 
 {{ block content }}
 
-<p>Please provide your Staff Identification Number (SID). This is required to process your payment. In its absence, you will not be able to receive your payment, and the experimental team will have to ignore your choices.</p>
+<p>We will now ask you a few questions about yourself that will be used to better understand and analyse the decisions made in the games.</p>
+<p>Please provide your Staff Identification Number (SID). This is required to process your payment. If you do not have a SID, please enter your email address. In the absence of either a SID or an email address, you will not be able to receive your payment, and the experimental team will have to ignore your choices.</p>
 
 {{ formfields }}
 
