--- a/risk_attitude/LotteryInstructions.html
+++ b/risk_attitude/LotteryInstructions.html
@@ -18,7 +18,7 @@ vertical-align:baseline;
 }
 </style>
 
-<table class="table">
+<table class="table" style="width:auto; text-align:center;">
     <thead>
         <th>Red/white ratio</th><th>Lottery A or B?</th>
     </thead>
