--- a/risk_attitude/LotteryUnderstood.html
+++ b/risk_attitude/LotteryUnderstood.html
@@ -17,7 +17,7 @@ vertical-align:baseline;
 </style>
 
 <p>Correct:</p>
-<table class="table">
+<table class="table" style="width:auto; text-align:center;">
     <thead>
         <th>Red/white ratio</th><th>Lottery A or B?</th>
     </thead>
