--- a/risk_attitude/LotteryDecision.html
+++ b/risk_attitude/LotteryDecision.html
@@ -21,60 +21,72 @@ vertical-align:baseline;
 }
 </style>
 
-<table class="table" style="width:auto; text-align:center;">
-    <thead>
-        <th>#</th><th>Red/white ratio</th><th>Lottery A or B?</th>
-    </thead>
+<table class="table">
+  <thead>
+    <th>#</th><th>Lottery A</th><th>Lottery B</th><th>Your decision?</th>
+  </thead>
+  <tbody>
     <tr>
-        <th>1</th>
-        <td><div class="lottery"><p>🔴 ⚪ ⚪ ⚪ ⚪<br />⚪ ⚪ ⚪ ⚪ ⚪</p></div></td>
-        <td>{{ formfield 'lottery1' }}</td>
+      <th>1</th>
+      <td>{{ lottery1 }}{{ pointsA }}</td>
+      <td>{{ lottery1 }}{{ pointsB }}</td>
+      <td>{{ formfield 'lottery1' }}</td>
     </tr>
     <tr>
-        <th>2</th>
-        <td><div class="lottery"><p>🔴 🔴 ⚪ ⚪ ⚪<br />⚪ ⚪ ⚪ ⚪ ⚪</p></div></td>
-        <td>{{ formfield 'lottery2' }}</td>
+      <th>2</th>
+      <td>{{ lottery2 }}{{ pointsA }}</td>
+      <td>{{ lottery2 }}{{ pointsB }}</td>
+      <td>{{ formfield 'lottery2' }}</td>
     </tr>
     <tr>
-        <th>3</th>
-        <td><div class="lottery"><p>🔴 🔴 🔴 ⚪ ⚪<br />⚪ ⚪ ⚪ ⚪ ⚪</p></div></td>
-        <td>{{ formfield 'lottery3' }}</td>
+      <th>3</th>
+      <td>{{ lottery3 }}{{ pointsA }}</td>
+      <td>{{ lottery3 }}{{ pointsB }}</td>
+      <td>{{ formfield 'lottery3' }}</td>
     </tr>
     <tr>
-        <th>4</th>
-        <td><div class="lottery"><p>🔴 🔴 🔴 🔴 ⚪<br />⚪ ⚪ ⚪ ⚪ ⚪</p></div></td>
-        <td>{{ formfield 'lottery4' }}</td>
+      <th>4</th>
+      <td>{{ lottery4 }}{{ pointsA }}</td>
+      <td>{{ lottery4 }}{{ pointsB }}</td>
+      <td>{{ formfield 'lottery4' }}</td>
     </tr>
     <tr>
-        <th>5</th>
-        <td><div class="lottery"><p>🔴 🔴 🔴 🔴 🔴<br />⚪ ⚪ ⚪ ⚪ ⚪</p></div></td>
-        <td>{{ formfield 'lottery5' }}</td>
+      <th>5</th>
+      <td>{{ lottery5 }}{{ pointsA }}</td>
+      <td>{{ lottery5 }}{{ pointsB }}</td>
+      <td>{{ formfield 'lottery5' }}</td>
     </tr>
     <tr>
-        <th>6</th>
-        <td><div class="lottery"><p>🔴 🔴 🔴 🔴 🔴<br />🔴 ⚪ ⚪ ⚪ ⚪</p></div></td>
-        <td>{{ formfield 'lottery6' }}</td>
+      <th>6</th>
+      <td>{{ lottery6 }}{{ pointsA }}</td>
+      <td>{{ lottery6 }}{{ pointsB }}</td>
+      <td>{{ formfield 'lottery6' }}</td>
     </tr>
     <tr>
-        <th>7</th>
-        <td><div class="lottery"><p>🔴 🔴 🔴 🔴 🔴<br />🔴 🔴 ⚪ ⚪ ⚪</p></div></td>
-        <td>{{ formfield 'lottery7' }}</td>
+      <th>7</th>
+      <td>{{ lottery7 }}{{ pointsA }}</td>
+      <td>{{ lottery7 }}{{ pointsB }}</td>
+      <td>{{ formfield 'lottery7' }}</td>
     </tr>
     <tr>
-        <th>8</th>
-        <td><div class="lottery"><p>🔴 🔴 🔴 🔴 🔴<br />🔴 🔴 🔴 ⚪ ⚪</p></div></td>
-        <td>{{ formfield 'lottery8' }}</td>
+      <th>8</th>
+      <td>{{ lottery8 }}{{ pointsA }}</td>
+      <td>{{ lottery8 }}{{ pointsB }}</td>
+      <td>{{ formfield 'lottery8' }}</td>
     </tr>
     <tr>
-        <th>9</th>
-        <td><div class="lottery"><p>🔴 🔴 🔴 🔴 🔴<br />🔴 🔴 🔴 🔴 ⚪</p></div></td>
-        <td>{{ formfield 'lottery9' }}</td>
+      <th>9</th>
+      <td>{{ lottery9 }}{{ pointsA }}</td>
+      <td>{{ lottery9 }}{{ pointsB }}</td>
+      <td>{{ formfield 'lottery9' }}</td>
     </tr>
     <tr>
-        <th>10</th>
-        <td><div class="lottery"><p>🔴 🔴 🔴 🔴 🔴<br />🔴 🔴 🔴 🔴 🔴</p></div></td>
-        <td>{{ formfield 'lottery10' }}</td>
+      <th>10</th>
+      <td>{{ lottery10 }}{{ pointsA }}</td>
+      <td>{{ lottery10 }}{{ pointsB }}</td>
+      <td>{{ formfield 'lottery10' }}</td>
     </tr>
+  </tbody>
 </table>
 
 <p>Once you have made your decisions please click ‘Next’.</p>
