--- a/risk_attitude/LotteryInstructions.html
+++ b/risk_attitude/LotteryInstructions.html
@@ -18,17 +18,21 @@ vertical-align:baseline;
 }
 </style>
 
-<table class="table" style="width:auto; text-align:center;">
-    <thead>
-        <th>Red/white ratio</th><th>Lottery A or B?</th>
-    </thead>
-    <tr>
-        <td><div class="lottery"><p>🔴 🔴 🔴 ⚪ ⚪<br />⚪ ⚪ ⚪ ⚪ ⚪</p></div></td>
-        <td>{{ lottery_payoffs }}
-        </td>
-    </tr>
+<table class="table">
+  <thead>
+    <th>Lottery A</th><th>Lottery B</th>
+  </thead>
+  <tbody>
+    <td>
+      <div class="lottery"><p>🔴 🔴 🔴 ⚪ ⚪<br />⚪ ⚪ ⚪ ⚪ ⚪</p></div>
+      <p>🔴 = {{ C.PAYOFF_RED_A }}, ⚪ = {{ C.PAYOFF_WHITE_A }} points</p>
+    </td>
+    <td>
+      <div class="lottery"><p>🔴 🔴 🔴 ⚪ ⚪<br />⚪ ⚪ ⚪ ⚪ ⚪</p></div>
+    <p>🔴 = {{ C.PAYOFF_RED_B }}, ⚪ = {{ C.PAYOFF_WHITE_B }} points</p>
+    </td>
+  </tbody>
 </table>
-
 <p>In each decision a red or white ball will be drawn randomly from the 10 balls shown, and the colour determines the number of points awarded. In this example there are 3 red and 7 white balls.</p>
 <p>Your task is to decide between two alternative lotteries, A and B. In this example, in both lotteries, you have 3 chances out of ten to draw a red ball and 7 chances out of ten to draw a white ball. The lotteries differ in the number of points that can be won in each of them: in lottery A the red ball is worth {{ C.PAYOFF_RED_A }} and the white ball is worth {{ C.PAYOFF_WHITE_A }}, while in lottery B, the red ball is worth more ({{ C.PAYOFF_RED_B }} points), while the white ball is worth less ({{ C.PAYOFF_WHITE_B }} points).</p>
 <p>You will have to make 10 decisions. In all 10 decisions, the red ball will always be worth {{ C.PAYOFF_RED_A }} in lottery A and {{ C.PAYOFF_RED_B }} points in lottery B, while the white ball will always be worth {{ C.PAYOFF_WHITE_A }} points in lottery A and {{ C.PAYOFF_WHITE_B }} points in lottery B.</p>
