--- a/risk_attitude/LotteryUnderstanding.html
+++ b/risk_attitude/LotteryUnderstanding.html
@@ -18,15 +18,20 @@ vertical-align:baseline;
 }
 </style>
 
-<table class="table" style="width:auto; text-align:center;">
-    <thead>
-        <th>Red/white ratio</th><th>Lottery A or B?</th>
-    </thead>
-    <tr>
-        <td><div class="lottery"><p>🔴 🔴 🔴 ⚪ ⚪<br />⚪ ⚪ ⚪ ⚪ ⚪</p></div></td>
-        <td>{{ lottery_payoffs }}
-        </td>
-    </tr>
+<table class="table">
+  <thead>
+    <th>Lottery A</th><th>Lottery B</th>
+  </thead>
+  <tbody>
+    <td>
+      <div class="lottery"><p>🔴 🔴 🔴 ⚪ ⚪<br />⚪ ⚪ ⚪ ⚪ ⚪</p></div>
+      <p>🔴 = {{ C.PAYOFF_RED_A }}, ⚪ = {{ C.PAYOFF_WHITE_A }} points</p>
+    </td>
+    <td>
+      <div class="lottery"><p>🔴 🔴 🔴 ⚪ ⚪<br />⚪ ⚪ ⚪ ⚪ ⚪</p></div>
+    <p>🔴 = {{ C.PAYOFF_RED_B }}, ⚪ = {{ C.PAYOFF_WHITE_B }} points</p>
+    </td>
+  </tbody>
 </table>
 <p>
 The above decision has been extracted for execution by the computer. In this decision you had chosen Lottery A. The computer extracts a white ball.
